<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">PanoDemo</string>
    <string name="action_settings">Settings</string>

    <!-- UI init -->
    <string name="satellite">Satellite</string>
    <string name="connect_state">Connect State</string>
    <string name="battery">Battery</string>
    <string name="common_message">Common Message</string>
    <string name="test">Test</string>
    <string name="panorama">Panorama</string>
    <string name="altitude">H</string>
    <string name="distance">D</string>
    <string name="vertical_speed">V.S</string>
    <string name="horizontal_speed">H.S</string>

    <!-- UI dynamic -->
    <string name="dji_sdk_activate_error">DJI SDK activate error</string>
    <string name="unsupported_drone">Unsupported drone,use Inspire1 or Phantom 3 pro try again</string>
    <string name="one_key_panorama">One key Panorama</string>
    <string name="groundstation_take_control">Be cautious!GroundStation take control now</string>
    <string name="init_gimabal_yaw">Initialize gimbal....</string>
    <string name="capturing_image">Capturing</string>
    <string name="capture_image_complete">Capture complete</string>
    <string name="downloading">Downloading</string>
    <string name="video_preview_disabled_during_stitching">Warning!video preview disabled during stitching</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_applicable">N/A</string>

</resources>